[package]
name = "d10-codecs"
version = "0.1.0"
authors = ["Volker Ströbel <volkerstroebel@mysurdity.de>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
image = { version = "0.24", default-features = false, features = ["bmp", "ico"] }
png = "0.17"
gif = "0.11"
jpeg-encoder = "0.5"
jpeg-decoder = "0.2"
libwebp-sys = "0.6"
d10-core = { path = "../d10-core" }