[package]
name = "d10-codecs"
version = "0.1.0"
authors = ["Volker Ströbel <volkerstroebel@mysurdity.de>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
image = { version = "0.24", default-features = false, features = ["bmp", "ico"] }
png = "0.17"
gif = "0.12"
jpeg-encoder = "0.6"
jpeg-decoder = "0.3"
libwebp-sys = "0.9"
d10-core = { path = "../d10-core" }